--- a/src/app/componentes/checkbox/checkbox.component.css
+++ b/src/app/componentes/checkbox/checkbox.component.css
@@ -7,6 +7,7 @@ input {
     height: 25px;
     margin-top: 7px;
     margin-right: 7px;
+    cursor:pointer;
 }
 
 .ancho_25 {
@@ -25,7 +26,7 @@ label {
 .ancho_50 {
     width: 110px;
 }
-@media screen and (max-width:850px) {
+@media screen and (max-width:1024px) {
     .ancho_50 {
         width: 14rem;
     }
@@ -35,15 +36,7 @@ label {
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width:850px) {
-    .ancho_50 {
-        width: 14rem;
-    }
-    /*Formulario C*/
-    .ancho_25_c {
-        width: 146px;
-    }
-}
+
 @media screen and (max-width: 1140px) and (min-width:1024px) {
     input {
         width: 23px;
@@ -58,13 +51,13 @@ label {
     }
 }
 
-@media screen and (max-width: 1552px) and (min-width: 1140px) {
+@media screen and (max-width: 1552px) and (min-width: 1024px) {
     input {
         width: 23px;
         height: 23px;
     }
     .ancho_25 {
-        width: 90px;
+        width: 89px;
     }
     .ancho_50 {
         width: 150px;
