--- a/src/app/paginas/formulario_E/formulario-e.component.css
+++ b/src/app/paginas/formulario_E/formulario-e.component.css
@@ -1,53 +1,395 @@
-.btn_enviar
+b{
+  margin-left: 10px;
+}
+.esquina_subtitulo
 {
-  margin-top: 4%;
-}
+  background-color: lightgrey;
+  font-weight:normal;
 
-.table
+}
+.tr_inactivo th
 {
-  width: 32rem;
-  margin-left: 14rem;
-  margin-bottom: unset;
+  background-color: grey;
+  color: #fff;
+}
+.activo
+{
+  background-color:grey;
+  color: #fff;
 }
 
-.contenedor {
-
-  font-size: 13px;
+.botones
+{
+    display: none;
 }
- th {
-  padding: 4px;
-  width: 14rem;
-  background-color: rgb(128, 128, 128);
-  color: #ffffff;
-  border-top: 1px solid #000;
+.celda_titulo
+{
+  background-color: lightgrey;
+  color: #000;
+  text-align: center;
   border-right: 1px solid #000;
   border-left: 1px solid #000;
-  text-align: center;
-
+  border-top: 1px solid #000;
+  width: 7.7rem;
+  padding: 0.3rem;
+  cursor: pointer;
 
 }
-@media  screen and (max-width: 763px)   and (min-width: 701px) {
-
-  .table
+.table
 {
-  width: 28rem;
+    width: 19rem;
+    margin-left: 13rem;
+  margin-bottom: unset;
+  border-color: #fff;
+  margin-left:unset;
+}
+
+.tabla_0
+{
+   
+
+  display: inline-block;
+}
+.tabla_1
+{
+ 
+    display: inline-block;
+}
+
+.tabla_1 td
+{
+    height: 38px;
+}
+.tabla_2
+{ display: inline-block;
+}
+.tabla_2 td
+{
+    height: 38px;
+}
+.tabla_3
+{
+    display: inline-block;
+}
+.tabla_3 td
+{
+    height: 38px;
+}
+.activo
+{
+  background-color:grey;
+  color: #fff;
+}
+.sin_borde_arriba
+{
+    border-top: unset  ; 
+}
+.sin_borde_abajo
+{
+  border-bottom: unset ;
+  height: 38px;
+}
+
+.esquina_izquierda
+{
+  border-left: 1px solid;
+  font-weight:normal;
+  background-color: lightgrey;
+}
+.esquina_derecha
+{
+  border-right: 1px solid;
+  font-weight:normal;
+  background-color: lightgrey;
+}
+.celda_subtitulo
+{
+  background-color: lightgrey;
+  font-weight:normal;
 
 }
-}
-@media  screen and (max-width: 701px)  and (min-width: 320px)  {
 
-    .table
+
+ th {
+     padding: 4px;
+     border-top-width: 0px ;
+     border-bottom-width: 0px;
+
+}
+
+
+ table th {
+    text-align: center;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+
+}
+
+
+.div_responsivo {
+    box-sizing: border-box;
+    display: table-cell;
+
+ 
+ 
+}
+.contenedor {
+
+  font-size: 15px;
+  margin-left: 13px;
+}
+@media  screen and (max-width: 1552px) and (min-width: 1140px)  {
+
+  .contenedor
   {
-    width: 24.4rem;
-    margin-left: 12rem;
-
+    
+    font-size: 12px;
+  
   }
+
+}
+@media  screen and (max-width: 1140px)  and (min-width:865px) {
+ 
+  .contenedor
+  {
+    
+    font-size: 9px;
+  
   }
+ 
+}
+@media  screen and (max-width: 865px)  and (min-width: 763px) {
+    .esquina_subtitulo
+{
+    border-right: 1px solid;
+  font-weight:normal;
+  background-color: lightgrey;
 
-  @media  screen and (max-width: 320px)   {
+}
+.tr_inactivo
+{
+  display: none;
+  
 
-    .contenedor {
+}
+.btn
+{
+  font-size: 15px;
+}
+.div_responsivo {
+  
 
-      font-size: 12px;
+        display: inline-block;
+     margin-top: 10px;
+     margin-left: 1rem;
+     
+    }
+
+    .tabla_1 td
+{
+    height: 39px;
+    width: 15rem;
+    padding: 3px;
+}
+.tabla_3 td
+{
+    height: 39px;
+    width: 41px;
+}
+.tabla_0, .tabla_1 , .tabla_2 , .tabla_3{
+    height: 338px;
+}
+.sin_borde_abajo
+{
+  border-bottom: unset ;
+  padding-top: 17px;
+  padding-bottom: 12px;
+  width: 13.1rem;
+  height: 38px;
+}
+.tabla_2 td
+{
+    height: 39px;
+    width: 10rem;
+ 
+}
+.botones
+{
+    width: 17rem;
+    margin-left: 27.6rem;
+
+    display: block;
+}
+.tabla_1
+{
+    display: none;
+}
+.tabla_2
+{
+    display: none;
+}
+.tabla_3
+{
+    display: none;
+}
+}
+
+@media  screen and (max-width: 763px)   and (min-width: 692px) {
+  .tr_inactivo
+  {
+    display: none;
+    
+  
+  }
+    .esquina_subtitulo
+    {
+        border-right: 1px solid;
+      font-weight:normal;
+      background-color: lightgrey;
+    
+    }
+        .div_responsivo {
+      
+    
+            display: inline-block;
+         margin-top: 10px;
+         margin-left: 1rem;
+         
+        }
+    
+        .tabla_1 td
+    {
+        height: 39px;
+        width: 12.7rem;
+        padding: 3px;
+    }
+    
+    .sin_borde_abajo
+    {
+      border-bottom: unset ;
+      height: 39px;
+      width: 13rem;
+    }
+    .tabla_2 td
+    {
+        height: 39px;
+        width: 15.1rem;
+     
+    }
+    .botones
+    {
+        width: 17rem;
+        margin-left: 23rem;
+    
+        display: block;
+    }
+    .tabla_1
+    {
+        display: none;
+        width: 27rem;
+    }
+    .tabla_2
+    {
+        display: none;
+        width: 25.5rem;
+    }
+    .tabla_3
+    {
+        display: none;
+        width: 27rem;
+    }
+    .tabla_3 td
+    {
+        height: 39px;
+        width: 43px;
+    }
+    
+}
+
+  @media  screen and (max-width:692px)  and (min-width: 361px)  {
+  .tr_inactivo
+{
+  display: none;
+  
+
+}
+    .esquina_subtitulo
+    {
+        border-right: 1px solid;
+      font-weight:normal;
+      background-color: lightgrey;
+    
+    }
+        .div_responsivo {
+      
+    
+            display: inline-block;
+         margin-top: 10px;
+         margin-left: 1rem;
+         
+        }
+    
+        .tabla_1 td
+    {
+        height: 39px;
+        width: 13rem;
+        padding: 3px;
+    }
+    
+    .sin_borde_abajo
+    {
+      border-bottom: unset ;
+      height: 39px;
+      width: 13rem;
+    }
+    .tabla_2 td
+    {
+        height: 39px;
+        width: 15.1rem;
+     
+    }
+    .botones
+    {
+        width: 17rem;
+        margin-left: 23rem;
+    
+        display: block;
+    }
+    .tabla_1
+    {
+      
+        display: none;
+        width: 25.5rem;
+    }
+    .tabla_2
+    {
+        display: none;
+        width: 25.5rem;
+    }
+    .tabla_3
+    {
+        display: none;
+        width: 27rem;
+    }
+    .tabla_3 td
+    {
+        height: 39px;
+        width: 43px;
     }
   }
+
+   /*FORMULARIO D*/
+   @media  screen and (max-width: 361px)  {
+    .table_inactivo
+    {
+      display: none;
+    }
+    .botones
+    {
+        width: 17rem;
+
+    
+        display: block;
+    }
+   }
+
