--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@
       margin-top:5px;
       margin-left:5px;
       margin-right:5px;
-      font-size: 14px;
+      font-size: 12px;
   }
      
      body
@@ -35,6 +35,7 @@
       {
         margin-top: 2rem;
         margin-bottom: 5rem;
+ 
       }
       switch-boton
       {
@@ -82,7 +83,12 @@
     height: 7px;
   }
 
-  
+  .contenedor{
+    margin-top:5px;
+    margin-left:5px;
+    margin-right:5px;
+    font-size: 14px;
+}
 
 }
 
